# msgboard

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  docker-compose.yml  ecpgen  main.cpp
assets/: style.css
controllers/: application_controller.cpp  application_controller.hpp  messages_controller.cpp  messages_controller.hpp  sessions_controller.cpp  sessions_controller.hpp  users_controller.cpp  users_controller.hpp
database/: db_connection.cpp  db_connection.hpp  db_pool.cpp  db_pool.hpp
helpers/: application_helper.cpp  application_helper.hpp  sessions_helper.cpp  sessions_helper.hpp
models/: message.cpp  message.hpp  user.cpp  user.hpp
pg_docker/: Dockerfile  init.sql
templates/messages/: list.html.cpp  list.html.ecp  list.html.hpp  new.html.ecp  new.html.hpp
templates/sessions/: new.html.cpp  new.html.ecp  new.html.hpp
templates/users/: new.html.cpp  new.html.ecp  new.html.hpp
utils/: date.h
